--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -34,7 +34,7 @@ versions += [
   jopt: "4.9",
   junit: "4.12",
   lz4: "1.3.0",
-  mapr: "5.1.0-mapr-10",
+  mapr: "5.1.0-mapr",
   metrics: "2.2.0",
   powermock: "1.6.4",
   reflections: "0.9.10",
@@ -88,7 +88,7 @@ libs += [
   junit: "junit:junit:$versions.junit",
   joptSimple: "net.sf.jopt-simple:jopt-simple:$versions.jopt",
   lz4: "net.jpountz.lz4:lz4:$versions.lz4",
-  mapr: "com.mapr.streams:mapr-streams-compat:$versions.mapr",
+  mapr: "com.mapr.streams:mapr-streams:$versions.mapr",
   metrics: "com.yammer.metrics:metrics-core:$versions.metrics",
   powermock: "org.powermock:powermock-module-junit4:$versions.powermock",
   powermockEasymock: "org.powermock:powermock-api-easymock:$versions.powermock",
